--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,11 +19,11 @@ RUN add-apt-repository \
 RUN apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io
 
 WORKDIR /
-RUN git clone https://github.com/humlab-speech/approuter
-WORKDIR /sessman
+RUN git clone https://github.com/humlab-speech/session-manager
+WORKDIR /session-manager
 RUN npm install
 
 ENV GIT_SSL_NO_VERIFY=true
 ENV GIT_DISCOVERY_ACROSS_FILESYSTEM=true
 
-CMD ["node", "/sessman/src/index.js"]
+CMD ["node", "/session-manager/src/index.js"]
