--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-proxy": "^1.18.1",
     "nanoid": "^3.1.12",
     "node-docker-api": "^1.1.22",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "utf8": "^3.0.0"
   }
 }
