--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "nanoid": "^3.1.12",
     "node-docker-api": "^1.1.22",
     "node-fetch": "^2.6.1",
-    "utf8": "^3.0.0"
+    "rxjs": "^7.1.0",
+    "utf8": "^3.0.0",
+    "ws": "^7.5.0"
   }
 }
