--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Johan von Boer <johan.von.boer@umu.se>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
@@ -18,6 +19,7 @@
     "node-fetch": "^2.6.1",
     "rxjs": "^7.1.0",
     "utf8": "^3.0.0",
+    "validator": "^13.6.0",
     "ws": "^7.5.0"
   }
 }
