--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "http-proxy": "^1.18.1",
+    "mongodb": "^4.1.0",
     "nanoid": "^3.1.12",
     "node-docker-api": "^1.1.22",
     "node-fetch": "^2.6.1",
