--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "colors": "^1.4.0",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
+    "fs-extra": "^11.1.1",
     "http-proxy": "^1.18.1",
     "mongodb": "^4.1.0",
+    "mongoose": "^7.4.4",
     "nanoid": "^3.3.2",
     "node-docker-api": "^1.1.22",
     "node-fetch": "^2.6.7",
+    "rimraf": "^5.0.1",
     "rxjs": "^7.1.0",
+    "simple-git": "^3.19.1",
     "utf8": "^3.0.0",
     "validator": "^13.7.0",
     "ws": "^7.5.0"
