--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Johan von Boer <johan.von.boer@umu.se>",
   "license": "ISC",
   "dependencies": {
+    "@gradio/client": "^1.8.0",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "express": "^4.17.1",
@@ -20,6 +21,7 @@
     "nanoid": "^3.3.2",
     "node-docker-api": "^1.1.22",
     "node-fetch": "^2.6.7",
+    "nodemailer": "^6.9.16",
     "rimraf": "^5.0.1",
     "rxjs": "^7.1.0",
     "simple-git": "^3.19.1",
