--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-proxy": "^1.18.1",
     "mongodb": "^4.1.0",
     "mongoose": "^7.4.4",
+    "music-metadata": "^11.10.3",
     "nanoid": "^3.3.2",
     "node-docker-api": "^1.1.22",
     "node-fetch": "^2.6.7",
